// Copyright (C) 2021 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "storj.io/storj/satellite/internalpb";

package satellite.ordersmeta;

// OrderLimitMetadata is used to transmit meta information about an order limit.
// This data will be encrypted.
message OrderLimitMetadata {
    bytes bucket_id = 1;
    bytes project_bucket_prefix = 2;
    bytes compact_project_bucket_prefix = 3;
    int32 product_id = 4;
}
